# sortsense

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: sortsense.json
sortsense/: __init__.py  __main__.py  categorizer.py  cli.py  config.py  engine.py  extractor.py  utils.py  vision.py
tests/: __init__.py  test_categorizer.py  test_config.py
